--- a/Poke.Api/appsettings.json
+++ b/Poke.Api/appsettings.json
@@ -1,4 +1,14 @@
 {
+  "ExternalServices": {
+    "PokeApi": {
+      "Url": "https://pokeapi.co/api/v2",
+      "TimeoutSeconds": 60
+    },
+    "FunTranslations": {
+      "Url": "https://api.funtranslations.com/translate",
+      "TimeoutSeconds": 60
+    }
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
