--- a/Poke.Services/Poke.Services.csproj
+++ b/Poke.Services/Poke.Services.csproj
@@ -5,7 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="5.0.0" />
+    <ProjectReference Include="..\Poke.Models\Poke.Models.csproj" />
   </ItemGroup>
 
 </Project>
