translation, tests and overall checks

--- a/Poke.Services/Poke.Services.csproj
+++ b/Poke.Services/Poke.Services.csproj
@@ -5,6 +5,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="RestSharp" Version="106.12.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Poke.Models\Poke.Models.csproj" />
   </ItemGroup>
 
